mapwithfor/network.tf
## Create virtual network
resource "azurerm_virtual_network" "my_terraform_network" {
  name                = "myVnet"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
  address_space       = ["10.0.0.0/16"]
}

## Create subnet
resource "azurerm_subnet" "my_terraform_subnet" {
  name                 = "mySubnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.my_terraform_network.name
  address_prefixes     = ["10.0.1.0/24"]
}

## Create publicip
resource "azurerm_public_ip" "my_terraform_public_ip" {
  for_each             = local.vm_configurations
  name                 = each.value.name
  resource_group_name  = azurerm_resource_group.rg.name
  location             = each.value.location
  allocation_method    = "Dynamic"
}

## Create a Network security group and rule
resource "azurerm_network_security_group" "my_terraform_nsg" {
  name                 = "myNetworkSecurityGroup"
  location             = azurerm_resource_group.rg.location
  resource_group_name  = azurerm_resource_group.rg.name

  security_rule {
    name                        = "ssh"
    priority                    = 1000
    direction                   = "Inbound"
    access                      = "Allow"
    protocol                    = "Tcp"
    source_port_range           = "*"
    destination_port_range      = "22"
    source_address_prefix       = "*"
    destination_address_prefix  = "*"
  }

  security_rule {
    name                        = "http"
    priority                    = 1001
    direction                   = "Inbound"
    access                      = "Allow"
    protocol                    = "Tcp"
    source_port_range           = "*"
    destination_port_range      = "80"
    source_address_prefix       = "*"
    destination_address_prefix  = "*"
  }
}

## Create Network Interface
resource "azurerm_network_interface" "my_terraform_nic" {
  for_each             = local.vm_configurations
  name                 = "myNIC-${each.value.name}"
  location             = azurerm_resource_group.rg.location
  resource_group_name  = azurerm_resource_group.rg.name

  ip_configuration {
    name                          = "my_nic_configuration"
    subnet_id                     = azurerm_subnet.my_terraform_subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.my_terraform_public_ip[each.value.name].id
  }
}


## connect the seurity group with network interface
resource "azurerm_network_interface_security_group_association" "my_terraform_nicnsg_association" {
  for_each             = local.vm_configurations
  network_interface_id       = azurerm_network_interface.my_terraform_nic[each.value.name].id
  network_security_group_id  = azurerm_network_security_group.my_terraform_nsg.id
}
